[package]
name = "steamid-rs"
version = "0.3.0"
edition = "2021"
description = "SteamID parsing and formatting library that doesn't depend on Regex in idiomatic Rust."
license = "MIT"
repository = "https://github.com/Glitchvid/steamid-rs"

[lib]
name = "steamid"
path = "src/lib/mod.rs"


[[bin]]
name = "converter"